--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -11,8 +11,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <!-- The ActionBar displayed at the top -->
+
         <include
             layout="@layout/toolbar"
+            android:id = "@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
